fix: align dropdown menu to right on mobile view

--- a/src/project.css
+++ b/src/project.css
@@ -39,7 +39,7 @@ button{
     height: 300px;
 }
 .text{
-    margin-top: -50px;
+    margin-top: 10px;
 }
 }
 
@@ -50,7 +50,7 @@ button{
 }
 
 .text{
-    margin-top: -80px;
+    margin-top: -20px;
 }
 
 .p1{
